5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1593_1803.log
== SUBMITION (2019-03-28 11:19:08) 
-- CODE:
from math import*
n = int(input(" digite um numero "))
x1 = n//1000
x2 = n//100 -(n//1000)*10
x3 = n//10 - (n//100)*10
x4 = n//1 - (n/10)*10
final = (x1*5)+(x2*4)+(x3*3)+(x4*2)
print(final%)
-- EXECUTION TIME:
0.134478
-- ERROR:
  File "/home/codebench/codes/1593/1803/main.py", line 8
    print(final%)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:19:13) 
-- CODE:
from math import*
n = int(input(" digite um numero "))
x1 = n//1000
x2 = n//100 -(n//1000)*10
x3 = n//10 - (n//100)*10
x4 = n//1 - (n/10)*10
final = (x1*5)+(x2*4)+(x3*3)+(x4*2)
print(final%11)
-- EXECUTION TIME:
0.142458
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10.0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6.0
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:19:23) 
-- CODE:
from math import*
n = int(input(" digite um numero "))
x1 = n//1000
x2 = n//100 -(n//1000)*10
x3 = n//10 - (n//100)*10
x4 = n//1 - (n/10)*10
final = (x1*5)+(x2*4)+(x3*3)+(x4*2)
print(final% 11)
-- EXECUTION TIME:
0.159203
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10.0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6.0
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:19:29) 
-- CODE:
from math import*
n = int(input(" digite um numero "))
x1 = n//1000
x2 = n//100 -(n//1000)*10
x3 = n//10 - (n//100)*10
x4 = n//1 - (n/10)*10
final = (x1*5)+(x2*4)+(x3*3)+(x4*2)
print(final %11)
-- EXECUTION TIME:
0.175119
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10.0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6.0
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:20:17) 
-- CODE:
from math import*
n = int(input(" digite um numero "))
x1 = n//1000
x2 = n//100 -(n//1000)*10
x3 = n//10 - (n//100)*10
x4 = n//1 - (n//10)*10
final = (x1* 5)+(x2* 4)+(x3* 3)+(x4* 2)
print(final %11)
-- EXECUTION TIME:
0.16688
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
